force-app/main/Government_Documents/Permit_And_Licensing/objects/Nuvi_Permit_Status_Log__c/Nuvi_Permit_Status_Log__c.object-meta.xml
<CustomObject>
    <label>Nuvi Permit Status Log</label>
    <pluralLabel>Nuvi Permit Status Logs</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Nuvi Permit Status Log #</label>
        <displayFormat>NPSL-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>