force-app/main/Government_Documents/Permit_And_Licensing/objects/Nuvi_Permit_Status_Log__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>APD_Application__c</referenceTo>
    <relationshipLabel>Nuvi Permit Status Logs</relationshipLabel>
    <relationshipName>Nuvi_Permit_Status_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>